fix services cards alignment

--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -48,6 +48,9 @@
   }
 
   &__cards {
+    width: max-content;
+    margin: 0 auto;
+    
     @include onTablet {
       grid-column: 1 / 7;
 
@@ -58,7 +61,7 @@
 
     @include onSmallDesktop {
       grid-column: 7 / 13;
-      
+
       column-gap: 20px;
     }
 
